--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
 
+    <script src="main.js"></script>
+
 </head>
 <body>
 
@@ -35,7 +37,7 @@
     </section>
 
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio  src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
